# flask-generate

./: .editorconfig  .gitignore  README.md  pyproject.toml
src/flask_generate/: __init__.py  _extension.py  _fields.py  _files.py  _jinja.py  _utils.py  blueprint.py  cli.py  generators.py  main.py
src/flask_generate/management/: project.py
src/flask_generate/static/css/: styles.css
src/flask_generate/templates/: .env.example  base.html-tpl  blueprint.py-tpl  form.py-tpl  model.py-tpl
src/flask_generate/templates/app_files/: app.py-tpl  extensions.py-tpl  factory.py-tpl
src/flask_generate/templates/app_template/: extensions.py-tpl  factory.py-tpl  utils.py-tpl  wsgi.py-tpl
src/flask_generate/templates/app_template/settings/: __init__.py-tpl  base.py-tpl  dev.py-tpl  prod.py-tpl
src/flask_generate/templates/blueprint/: __init__.py-tpl  forms.py-tpl  routes.py-tpl
src/flask_generate/templates/forms/: base.py-tpl  form.py-tpl  overwrite.py-tpl
src/flask_generate/templates/generate/: icons.html.jinja  index.html.jinja
src/flask_generate/templates/jinja_templates/: _form.html-tpl  create.html-tpl  detail.html-tpl  index.html-tpl  update.html-tpl
src/flask_generate/templates/models/peewee/: append.py-tpl  model.py-tpl
src/flask_generate/templates/models/sqla/: model.py-tpl
src/flask_generate/templates/models/sqlalchemy/: append.py-tpl  model.py-tpl
src/flask_generate/templates/scaffolding/: blueprint.py-tpl  ext_peewee.py-tpl  ext_sqla.py-tpl
src/flask_generate/templates/scaffolding/blueprint/: __init__.py-tpl  routes.py-tpl
src/flask_generate/templates/scaffolding/routes/: peewee.py-tpl  sqlalchemy.py-tpl
src/flask_generate/templates/settings/: __init__.py-tpl  base.py-tpl  dev.py-tpl
tests/: test_cli.py  test_extension.py  test_generator.py
