[project]
name = "Flask-Generate"
version = "0.1.0"
description = "Scaffold generator for Flask apps."
authors = [
    { name = "Brandon Arreguin", email = "arreguin.tech@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "click"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{ include = "flask_generate", from = "src" }]

[project.scripts]
flask-generate = "flask_generate.main:execute"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"