[project]
name = "Flask-Generate"
version = "0.1.1"
description = "Scaffolding generator for the Flask framework."
authors = [
    { name = "Brandon Arreguin", email = "arreguin.tech@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "flask",
    "jinja2",
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{ include = "flask_generate", from = "src" }]

[project.scripts]
flask-generate = "flask_generate.main:execute"

[project.urls]
Source = "https://github.com/itsarreguin/flask-generate"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"